--- a/.github/workflows/lin_mpich-4.1_riscv-gcc-15.1.yml
+++ b/.github/workflows/lin_mpich-4.1_riscv-gcc-15.1.yml
@@ -26,7 +26,6 @@ jobs:
           file /home/runner/work/actions/actions/riscv/bin/riscv64-unknown-linux-musl-gcc
           ls /
           ls /lib
-          /home/runner/work/actions/actions/riscv/bin/riscv64-unknown-linux-musl-gcc
           wget -q  https://www.mpich.org/static/downloads/4.1/mpich-4.1.tar.gz
           tar -xzf mpich-4.1.tar.gz
           cd mpich-4.1
@@ -36,3 +35,32 @@ jobs:
             --host=riscv64-linux-musl \
              CC=/home/runner/work/actions/actions/riscv/bin/riscv64-unknown-linux-musl-gcc \
              CXX=/home/runner/work/actions/actions/riscv/bin/riscv64-unknown-linux-musl-g++ || true
+          make -j2
+          make install
+          cd ..
+          rm -rf mpich-4.1 mpich-4.1.tar.gz
+          mkdir build
+          cd build
+          export CC=riscv64-unknown-linux-musl-gcc
+          export CXX=riscv64-unknown-linux-musl-g++
+          export FC=riscv64-unknown-linux-musl-gfortran
+          export LD_LIBRARY_PATH=/home/runner/.local/lib:$LD_LIBRARY_PATH
+          export MPI_C_COMPILER=/home/runner/.local/bin/mpicc
+          export MPI_CXX_COMPILER=/home/runner/.local/bin/mpicxx
+          export RISCV_ARCH_FLAGS="-march=rv64gc -mabi=lp64d"
+          cmake \
+            -DCMAKE_INSTALL_PREFIX=$HOME/.local \
+            -DCMAKE_CROSSCOMPILING=TRUE \
+            -DCMAKE_SYSTEM_PROCESSOR=riscv64 \
+            -DBUILDNAME:STRING="x86_64/mpich-4.1/riscv64-gcc-15.1" \
+            -DCMAKE_BUILD_TYPE=Debug \
+            -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
+            -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" \
+            -DHDF5_BUILD_FORTRAN=ON \
+            -DHDF5_ENABLE_PARALLEL=ON \
+            -DSITE:STRING="ubu-24" \
+            ..
+          ctest -C Debug -D Experimental
+          make install
+          ls $HOME/.local/lib/pkgconfig
+          cat $HOME/.local/lib/pkgconfig/hdf5.pc
