--- a/.github/workflows/lin_mpich-4.1_riscv-gcc-15.1.yml
+++ b/.github/workflows/lin_mpich-4.1_riscv-gcc-15.1.yml
@@ -56,7 +56,7 @@ jobs:
             -DCMAKE_BUILD_TYPE=Debug \
             -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
             -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" \
-            -DHDF5_BUILD_FORTRAN=ON \
+            -DHDF5_BUILD_FORTRAN=OFF \
             -DHDF5_ENABLE_PARALLEL=ON \
             -DSITE:STRING="ubu-24" \
             ..
