--- a/.github/workflows/lin_mpich-4.1_riscv-gcc-15.1.yml
+++ b/.github/workflows/lin_mpich-4.1_riscv-gcc-15.1.yml
@@ -60,7 +60,7 @@ jobs:
             -DHDF5_ENABLE_PARALLEL=ON \
             -DSITE:STRING="ubu-24" \
             ..
-          ctest -C Debug -D Experimental
+          make -j2
           make install
           ls $HOME/.local/lib/pkgconfig
           cat $HOME/.local/lib/pkgconfig/hdf5.pc
