test: user supplied options

--- a/.github/workflows/alp_mpich-4.1_gcc-14.1_f.yml
+++ b/.github/workflows/alp_mpich-4.1_gcc-14.1_f.yml
@@ -3,7 +3,7 @@ name: alp mpich-4.1 gcc-14.1 f
 on:
   push:
     branches:
-      - main-
+      - main
 
 jobs:
   build:
@@ -93,6 +93,7 @@ jobs:
             -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" \
             -DHDF5_BUILD_FORTRAN=ON \
             -DHDF5_ENABLE_PARALLEL=ON \
+            -DPAC_FC_ALL_INTEGER_KINDS_SIZEOF={1,2,4,8,16} -DPAC_FORTRAN_NUM_LOGICAL_KINDS=5 -DPAC_FC_ALL_LOGICAL_KINDS={1,2,4,8,16} -DPAC_FORTRAN_NUM_REAL_KINDS=3-DPAC_FC_ALL_REAL_KINDS={4,8,16} -DPAC_FC_ALL_REAL_KINDS_SIZEOF={4,8,16} -DH5_PAC_FC_MAX_REAL_PRECISION=33 -DPAC_FORTRAN_NATIVE_INTEGER_KIND=4 -DPAC_FORTRAN_NATIVE_INTEGER_SIZEOF=4 -DPAC_FORTRAN_NATIVE_REAL_KIND=4 -DPAC_FORTRAN_NATIVE_REAL_SIZEOF=4 -DPAC_FORTRAN_NATIVE_DOUBLE_KIND=8 -DPAC_FORTRAN_NATIVE_DOUBLE_SIZEOF=8 -DH5_H5CONFIG_F_NUM_IKIND=INTEGER, PARAMETER :: num_ikinds = 5 -DH5_H5CONFIG_F_IKIND=INTEGER, DIMENSION(1:num_ikinds) :: ikind = (/1,2,4,8,16/) \
             -DSITE:STRING="alp" \
             ..
           ctest -C Debug -D Experimental
