--- a/.github/workflows/alp_mpich-4.1_gcc-14.1_f.yml
+++ b/.github/workflows/alp_mpich-4.1_gcc-14.1_f.yml
@@ -13,6 +13,7 @@ jobs:
         uses: actions/checkout@v5
         with:
           repository: HDFGroup/hdf5
+          ref: 2.0.0
 
       - name: alpine
         uses: jirutka/setup-alpine@v1
