--- a/.github/workflows/amd64_mac-15_ninja_cl-21_fl-21.yml
+++ b/.github/workflows/amd64_mac-15_ninja_cl-21_fl-21.yml
@@ -1,5 +1,4 @@
 name: amd64 mac-15 ninja cl-21 fl-21
-
 on:
   push:
     branches: main
@@ -12,7 +11,22 @@ jobs:
           brew update
           brew install flang
       - name: checkout
-        uses: actions/checkout@v5.0.0
+        uses: actions/checkout@v6.0.1
+        with:
+          repository: HDFGroup/hdf5
       - name: test
         run: |
           ls /usr/local/bin/flang*
+          export FC=/usr/local/bin/flang-21
+          export CC=/usr/local/Cellar/llvm/21.1.7/bin/clang
+          export CXX=/usr/local/Cellar/llvm/21.1.7/bin/clang++
+          mkdir build
+          cd build
+          cmake -G Ninja \
+            -DSITE:STRING=mac-15.x86_64 \
+            -DBUILDNAME:STRING="ninja/cl-21/fl-21" \
+            -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
+            -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" \
+            -DHDF5_BUILD_FORTRAN=ON \
+            ..
+         ctest -D Experimental
