--- a/.github/workflows/amd64_mac-15_ninja_cl-21_fl-21.yml
+++ b/.github/workflows/amd64_mac-15_ninja_cl-21_fl-21.yml
@@ -1,20 +1,24 @@
 name: amd64 mac-15 ninja cl-21 fl-21
+
 on:
   push:
     branches:
       - main
+
 jobs:
   build:
     runs-on: macos-15-intel
     steps:
+      - name: checkout
+        uses: actions/checkout@v5
+        with:
+          repository: HDFGroup/hdf5
+
       - name: install
         run: |
           brew update
           brew install flang
-      - name: checkout
-        uses: actions/checkout@v6
-        with:
-          repository: "HDFGroup/hdf5"
+
       - name: test
         run: |
           ls /usr/local/bin/flang*
