--- a/.github/workflows/amd64_mac-15_ninja_cl-21_fl-21.yml
+++ b/.github/workflows/amd64_mac-15_ninja_cl-21_fl-21.yml
@@ -27,3 +27,10 @@ jobs:
           export CXX=/usr/local/Cellar/llvm/21.1.7/bin/clang++
           mkdir build
           cd build
+          cmake -G Ninja \
+            -DSITE:STRING=mac-15.x86_64 \
+            -DBUILDNAME:STRING="ninja/cl-21/fl-21" \
+            -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
+            -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" \
+            -DHDF5_BUILD_FORTRAN=ON \
+            ..
