ci(amd64,mac-15): add ctest

--- a/.github/workflows/amd64_mac-15_ninja_cl-21_fl-21.yml
+++ b/.github/workflows/amd64_mac-15_ninja_cl-21_fl-21.yml
@@ -34,3 +34,4 @@ jobs:
             -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" \
             -DHDF5_BUILD_FORTRAN=ON \
             ..
+          ctest -D Experimental
