--- a/.github/workflows/mac-15_ninja_cl-21_fl-21.yml
+++ b/.github/workflows/mac-15_ninja_cl-21_fl-21.yml
@@ -21,10 +21,10 @@ jobs:
 
       - name: test
         run: |
-          ls /opt/brew/bin/flang*
-          export FC=/opt/brew/bin/flang-21
-          export CC=/opt/brew/Cellar/llvm/21.1.7/bin/clang
-          export CXX=/opt/brew/Cellar/llvm/21.1.7/bin/clang++
+          ls /opt/homebrew/bin/flang*
+          export FC=/opt/homebrew/bin/flang-21
+          export CC=/opt/homebrew/Cellar/llvm/21.1.7/bin/clang
+          export CXX=/opt/homebrew/Cellar/llvm/21.1.7/bin/clang++
           mkdir build
           cd build
           cmake -G Ninja \
