--- a/.github/workflows/mac-15_ninja_cl-21_fl-21.yml
+++ b/.github/workflows/mac-15_ninja_cl-21_fl-21.yml
@@ -28,7 +28,7 @@ jobs:
           mkdir build
           cd build
           cmake -G Ninja \
-            -DSITE:STRING=mac-15.x86_64 \
+            -DSITE:STRING=mac-15 \
             -DBUILDNAME:STRING="ninja/cl-21/fl-21" \
             -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
             -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" \
