--- a/.github/workflows/win-d.yml
+++ b/.github/workflows/win-d.yml
@@ -3,19 +3,18 @@ name: win d
 on:
   push:
     branches:
-      - main-
+      - main
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: windows-2025
     steps:
-      - name: get
-        run: |
-          curl -s -O -L  https://support.hdfgroup.org/releases/hdf5/v1_14/v1_14_5/downloads/snapshot-1.14.5.zip
-          unzip -q snapshot-1.14.5.zip
+      - name: Checkout
+        uses: actions/checkout@v6
+        with:
+          repository: HDFGroup/hdf5    
       - name: test
         run: |
-          cd  hdf5-1.14.5-2
           mkdir build
           cd build
-          cmake -DSITE:STRING=win -DBUILDNAME:STRING="5/d" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" ..
-          ctest -D Experimental -C Debug
+          cmake -DSITE:STRING="win-25" -DBUILDNAME:STRING="d/guard:cf" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5"  -DCMAKE_C_FLAGS="/guard:cf" -DCMAKE_CXX_FLAGS="/guard:cf" -DCMAKE_EXE_LINKER_FLAGS="/DYNAMICBASE" -DCMAKE_SHARED_LINKER_FLAGS="/DYNAMICBASE" ..
+          ctest -C Debug -D Experimental 
