--- a/.github/workflows/win_gcf.yml
+++ b/.github/workflows/win_gcf.yml
@@ -16,5 +16,5 @@ jobs:
         run: |
           mkdir build
           cd build
-          cmake -DSITE:STRING=win-25 -DBUILDNAME:STRING="guard:cf" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5"  -DCMAKE_C_FLAGS="/guard:cf" -DCMAKE_CXX_FLAGS="/guard:cf" -DCMAKE_EXE_LINKER_FLAGS="/DYNAMICBASE" -DCMAKE_SHARED_LINKER_FLAGS="/DYNAMICBASE" ..
+          cmake -DSITE:STRING=win-25 -DBUILDNAME:STRING="guard:cf" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5"  -DCMAKE_C_FLAGS="/guard:cf  /DWIN32 /D_WINDOWS" -DCMAKE_CXX_FLAGS="/guard:cf  /DWIN32 /D_WINDOWS" -DCMAKE_EXE_LINKER_FLAGS="/DYNAMICBASE" -DCMAKE_SHARED_LINKER_FLAGS="/DYNAMICBASE" ..
           ctest -C Release -D Experimental 
