--- a/.github/workflows/win_d_gcf.yml
+++ b/.github/workflows/win_d_gcf.yml
@@ -1,4 +1,4 @@
-name: win d gcf
+name: win d tv gcf
 
 on:
   push:
@@ -16,5 +16,5 @@ jobs:
         run: |
           mkdir build
           cd build
-          cmake -DSITE:STRING="win-11.arm64" -DBUILDNAME:STRING="d/guard:cf" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5"  -DCMAKE_C_FLAGS_INIT="/guard:cf" -DCMAKE_CXX_FLAGS_INIT="/guard:cf" -DCMAKE_EXE_LINKER_FLAGS="/DYNAMICBASE" -DCMAKE_SHARED_LINKER_FLAGS="/DYNAMICBASE" ..
+          cmake -DSITE:STRING="win-11.arm64" -DBUILDNAME:STRING="d/tv/guardcf" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" -DHDF5_TEST_VFD:BOOL=ON  -DCMAKE_C_FLAGS_INIT="/guard:cf" -DCMAKE_CXX_FLAGS_INIT="/guard:cf" -DCMAKE_EXE_LINKER_FLAGS="/DYNAMICBASE" -DCMAKE_SHARED_LINKER_FLAGS="/DYNAMICBASE" ..
           ctest -C Debug -D Experimental 
