--- a/.github/workflows/win_d_gcf.yml
+++ b/.github/workflows/win_d_gcf.yml
@@ -6,7 +6,7 @@ on:
       - main
 jobs:
   build:
-    runs-on: windows-11-arm
+    runs-on: windows-2025
     steps:
       - name: Checkout
         uses: actions/checkout@v6
@@ -16,5 +16,5 @@ jobs:
         run: |
           mkdir build
           cd build
-          cmake -DSITE:STRING="win-11.arm64" -DBUILDNAME:STRING="d/tv/guardcf" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" -DHDF5_TEST_VFD:BOOL=ON  -DCMAKE_C_FLAGS_INIT="/guard:cf" -DCMAKE_CXX_FLAGS_INIT="/guard:cf" -DCMAKE_EXE_LINKER_FLAGS="/DYNAMICBASE" -DCMAKE_SHARED_LINKER_FLAGS="/DYNAMICBASE" ..
+          cmake -DSITE:STRING="win-25" -DBUILDNAME:STRING="d/tv/guardcf" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" -DHDF5_TEST_VFD:BOOL=ON  -DCMAKE_C_FLAGS_INIT="/guard:cf" -DCMAKE_CXX_FLAGS_INIT="/guard:cf" -DCMAKE_EXE_LINKER_FLAGS="/DYNAMICBASE" -DCMAKE_SHARED_LINKER_FLAGS="/DYNAMICBASE" ..
           ctest -C Debug -D Experimental 
