ci(omni): cd work

--- a/.github/workflows/omni.yml
+++ b/.github/workflows/omni.yml
@@ -35,6 +35,8 @@ jobs:
           psrinfo -v
           echo "::memstat" | mdb -k
           echo "OK"
+          cd work
+          ls
           mkdir build
           cd build
           cmake \
