--- a/.github/workflows/obsd-7.8_ompi_cpp.yml
+++ b/.github/workflows/obsd-7.8_ompi_cpp.yml
@@ -39,11 +39,13 @@ jobs:
             export OMPI_MCA_btl=self,tcp
             mkdir build
             cd build
-            cmake -DBUILDNAME="pr6145/ompi/cpp" \
-            -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
-            -DHDF5_BUILD_CPP_LIB:BOOL=ON \
-            -DHDF5_ENABLE_PARALLEL:BOOL=ON \
-            -DMPIEXEC_PREFLAGS="-oversubscribe" \
-            -DSITE:STRING=obsd-7.8 \
+            cmake \
+              -DALLOW_UNSUPPORTED=ON \
+              -DBUILDNAME="pr6145/ompi/cpp" \
+              -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
+              -DHDF5_BUILD_CPP_LIB:BOOL=ON \
+              -DHDF5_ENABLE_PARALLEL:BOOL=ON \
+              -DMPIEXEC_PREFLAGS="-oversubscribe" \
+              -DSITE:STRING="obsd-7.8" \
             ..
             ctest -D Experimental
