--- a/.github/workflows/obsd-7.8_ompi_cpp.yml
+++ b/.github/workflows/obsd-7.8_ompi_cpp.yml
@@ -40,9 +40,9 @@ jobs:
             mkdir build
             cd build
             cmake \
-              -DALLOW_UNSUPPORTED=ON \
               -DBUILDNAME="pr6145/ompi/cpp" \
               -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
+              -DHDF5_ALLOW_UNSUPPORTED=ON \
               -DHDF5_BUILD_CPP_LIB:BOOL=ON \
               -DHDF5_ENABLE_PARALLEL:BOOL=ON \
               -DMPIEXEC_PREFLAGS="-oversubscribe" \
