--- a/.github/workflows/aocc5.yml
+++ b/.github/workflows/aocc5.yml
@@ -1,49 +1,52 @@
-name: linux autotools aocc ompi
+name: lin aocc-5.1.0 ompi-4.1.6
 
 on:
   push:
     branches:
-      - main-
+      - main
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v6
+        with:
+          repository: HDFGroup/hdf5
       - name: Install System dependencies
         run: |
           sudo apt update
           sudo apt install -y libaec-dev zlib1g-dev automake autoconf libcurl4-openssl-dev libjpeg-dev wget curl bzip2 m4 flex bison cmake libzip-dev doxygen openssl libtool libtool-bin build-essential libncurses-dev libquadmath0 libstdc++6 libxml2
-      - name: Install AOCC 5.0.0
+      - name: Install AOCC 5.1.0
         run: |
-          wget https://download.amd.com/developer/eula/aocc/aocc-5-0/aocc-compiler-5.0.0.tar
-          tar -xvf aocc-compiler-5.0.0.tar
-          cd aocc-compiler-5.0.0
+          wget https://download.amd.com/developer/eula/aocc/aocc-5-0/aocc-compiler-5.1.0.tar
+          tar -xvf aocc-compiler-5.1.0.tar
+          cd aocc-compiler-5.1.0
           bash install.sh
           source /home/runner/work/actions/actions/setenv_AOCC.sh
           which clang
           which flang
           clang -v
-      - name: Install OpenMPI 4.1.5
+      - name: Install OpenMPI 4.1.6
         run: |
-          export LD_LIBRARY_PATH=/home/runner/work/actions/actions/aocc-compiler-5.0.0/lib:/usr/local/lib
-          wget https://download.open-mpi.org/release/open-mpi/v4.1/openmpi-4.1.5.tar.gz
-          tar zxvf openmpi-4.1.5.tar.gz
-          cd openmpi-4.1.5
-          ./configure CC=/home/runner/work/actions/actions/aocc-compiler-5.0.0/bin/clang FC=/home/runner/work/actions/actions/aocc-compiler-5.0.0/bin/flang --prefix=/usr/local
+          export LD_LIBRARY_PATH=/home/runner/work/actions/actions/aocc-compiler-5.1.0/lib:/usr/local/lib
+          wget https://download.open-mpi.org/release/open-mpi/v4.1/openmpi-4.1.6.tar.gz
+          tar zxvf openmpi-4.1.6.tar.gz
+          cd openmpi-4.1.6
+          ./configure CC=/home/runner/work/actions/actions/aocc-compiler-5.1.0/bin/clang FC=/home/runner/work/actions/actions/aocc-compiler-5.1.0/bin/flang --prefix=/usr/local
           make
           sudo make install
       - name: Install HDF5
         env:
           NPROCS: 2
         run: |
-          export LD_LIBRARY_PATH=/home/runner/work/actions/actions/aocc-compiler-5.0.0/lib:/usr/local/lib/openmpi:/usr/local/lib
-          export LD_RUN_PATH=/home/runner/work/actions/actions/aocc-compiler-5.0.0/lib:/usr/local/lib/openmpi:/usr/local/lib          
+          export LD_LIBRARY_PATH=/home/runner/work/actions/actions/aocc-compiler-5.1.0/lib:/usr/local/lib/openmpi:/usr/local/lib
+          export LD_RUN_PATH=/home/runner/work/actions/actions/aocc-compiler-5.1.0/lib:/usr/local/lib/openmpi:/usr/local/lib          
           export PATH=/usr/local/bin:$PATH
           ls /usr/local/bin
           cd ..
           git clone https://github.com/HDFGroup/hdf5.git
           cd hdf5
           ./autogen.sh
-          ./configure  --enable-parallel --enable-shared CC=/usr/local/bin/mpicc LDFLAGS="-L/home/runner/work/actions/actions/aocc-compiler-5.0.0/lib -L/usr/local/lib/openmpi"
+          ./configure  --enable-parallel --enable-shared CC=/usr/local/bin/mpicc LDFLAGS="-L/home/runner/work/actions/actions/aocc-compiler-5.1.0/lib -L/usr/local/lib/openmpi"
           cat config.log
           make -j
           make check -j
