--- a/.github/workflows/aocc5.yml
+++ b/.github/workflows/aocc5.yml
@@ -11,13 +11,13 @@ jobs:
       - uses: actions/checkout@v6
         with:
           repository: HDFGroup/hdf5
-      - name: Install System dependencies
+      - name: install
         run: |
           sudo apt update
           sudo apt install -y libaec-dev zlib1g-dev automake autoconf libcurl4-openssl-dev libjpeg-dev wget curl bzip2 m4 flex bison cmake libzip-dev doxygen openssl libtool libtool-bin build-essential libncurses-dev libquadmath0 libstdc++6 libxml2
-      - name: Install AOCC 5.1.0
+      - name: aocc
         run: |
-          wget https://download.amd.com/developer/eula/aocc/aocc-5-0/aocc-compiler-5.1.0.tar
+          wget https://download.amd.com/developer/eula/aocc/aocc-5-1/aocc-compiler-5.1.0.tar
           tar -xvf aocc-compiler-5.1.0.tar
           cd aocc-compiler-5.1.0
           bash install.sh
@@ -25,7 +25,7 @@ jobs:
           which clang
           which flang
           clang -v
-      - name: Install OpenMPI 4.1.6
+      - name: ompi
         run: |
           export LD_LIBRARY_PATH=/home/runner/work/actions/actions/aocc-compiler-5.1.0/lib:/usr/local/lib
           wget https://download.open-mpi.org/release/open-mpi/v4.1/openmpi-4.1.6.tar.gz
@@ -34,19 +34,17 @@ jobs:
           ./configure CC=/home/runner/work/actions/actions/aocc-compiler-5.1.0/bin/clang FC=/home/runner/work/actions/actions/aocc-compiler-5.1.0/bin/flang --prefix=/usr/local
           make
           sudo make install
-      - name: Install HDF5
+      - name: hdf5
         env:
           NPROCS: 2
         run: |
           export LD_LIBRARY_PATH=/home/runner/work/actions/actions/aocc-compiler-5.1.0/lib:/usr/local/lib/openmpi:/usr/local/lib
           export LD_RUN_PATH=/home/runner/work/actions/actions/aocc-compiler-5.1.0/lib:/usr/local/lib/openmpi:/usr/local/lib          
           export PATH=/usr/local/bin:$PATH
-          ls /usr/local/bin
-          cd ..
-          git clone https://github.com/HDFGroup/hdf5.git
-          cd hdf5
-          ./autogen.sh
-          ./configure  --enable-parallel --enable-shared CC=/usr/local/bin/mpicc LDFLAGS="-L/home/runner/work/actions/actions/aocc-compiler-5.1.0/lib -L/usr/local/lib/openmpi"
-          cat config.log
-          make -j
-          make check -j
+          export CC=/usr/local/bin/mpicc
+          export LDFLAGS="-L/home/runner/work/actions/actions/aocc-compiler-5.1.0/lib -L/usr/local/lib/openmpi"          
+          mkdir build
+          cd build
+          cmake ..
+          ctest -T Build
+          ctest -T Test
