--- a/.github/workflows/mac-14_ninja_clang15_d_h_f_mpich_sf.yml
+++ b/.github/workflows/mac-14_ninja_clang15_d_h_f_mpich_sf.yml
@@ -56,6 +56,7 @@ jobs:
 
     - name: flang-21
       run: |
+        export PATH=/opt/local/bin:/opt/local/sbin:$PATH
         sudo port install flang-21
 
     - name: install mpich
