ci(mac-14): autogen.sh

--- a/.github/workflows/mac-14_ninja_clang15_d_h_f_mpich_sf.yml
+++ b/.github/workflows/mac-14_ninja_clang15_d_h_f_mpich_sf.yml
@@ -63,6 +63,7 @@ jobs:
       run: |
         export PATH=/opt/local/bin:/opt/local/sbin:$PATH
         cd mpich
+        ./autogen.sh
         /configure --prefix=/opt/local/mpich --disable-cxx
         make -j2
         sudo make install
