ci(mac-14): autotools

--- a/.github/workflows/mac-14_ninja_clang15_d_h_f_mpich_sf.yml
+++ b/.github/workflows/mac-14_ninja_clang15_d_h_f_mpich_sf.yml
@@ -62,6 +62,7 @@ jobs:
     - name: install mpich
       run: |
         export PATH=/opt/local/bin:/opt/local/sbin:$PATH
+        brew install autotools
         cd mpich
         ./autogen.sh
         /configure --prefix=/opt/local/mpich --disable-cxx
