ci(mac-14): mpich submodules

--- a/.github/workflows/mac-14_ninja_clang15_d_h_f_mpich_sf.yml
+++ b/.github/workflows/mac-14_ninja_clang15_d_h_f_mpich_sf.yml
@@ -39,6 +39,7 @@ jobs:
       with:
         repository: pmodels/mpich
         path: mpich
+        submodules: recursive
 
     - name: get
       run: |
