--- a/.github/workflows/mac-14_ninja_clang15_d_h_f_mpich_sf.yml
+++ b/.github/workflows/mac-14_ninja_clang15_d_h_f_mpich_sf.yml
@@ -66,7 +66,7 @@ jobs:
         brew install autoconf automake libtool
         cd mpich
         ./autogen.sh
-        /configure --prefix=/opt/local/mpich --disable-cxx
+        ./configure --prefix=/opt/local/mpich --disable-cxx
         make -j2
         sudo make install
 
