ci(mac-14): CC FC

--- a/.github/workflows/mac-14_ninja_clang15_d_h_f_mpich_sf.yml
+++ b/.github/workflows/mac-14_ninja_clang15_d_h_f_mpich_sf.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       matrix:
         include:
-          - name: "macOS Latest Clang"
+          - name: "mpich"
             artifact: "macOS.tar.xz"
             os: macos-14
             build_type: "Debug"
