ci(mac-14): fix xport

--- a/.github/workflows/mac-14_ninja_clang15_d_h_f_mpich_sf.yml
+++ b/.github/workflows/mac-14_ninja_clang15_d_h_f_mpich_sf.yml
@@ -68,7 +68,7 @@ jobs:
         cd mpich
         ./autogen.sh
         export PATH=/opt/local/opt/llvm/bin:$PATH
-        xport LDFLAGS="-L/opt/local/opt/llvm/lib"
+        export LDFLAGS="-L/opt/local/opt/llvm/lib"
         export CPPFLAGS="-I/opt/local/opt/llvm/include"
         ./configure CC=clang-21 FC=flang-21 \
           --prefix=/opt/local/mpich --disable-cxx
