ci(mac-14): cat config

--- a/.github/workflows/mac-14_ninja_clang15_d_h_f_mpich_sf.yml
+++ b/.github/workflows/mac-14_ninja_clang15_d_h_f_mpich_sf.yml
@@ -70,10 +70,12 @@ jobs:
         export PATH=/opt/local/libexec/llvm-21/bin:$PATH
         export LDFLAGS="-L/opt/local/libexec/llvm-21/lib"
         export CPPFLAGS="-I/opt/local/libexec/llvm-21/include"
-        ./configure CC=clang FC=flang \
+        ./configure CC=/opt/local/libexec/llvm-21/bin/clang FC=/opt/local/libexec/llvm-21/bin/flang \
           --prefix=/opt/local/mpich --disable-cxx
-        make -j2
-        sudo make install
+      continue-on-error: true
+
+    - name: test
+      run: cat mpich/config.log
 
     - name: test
       run: |
