ci(mac-14): -lSystem

--- a/.github/workflows/mac-14_ninja_clang15_d_h_f_mpich_sf.yml
+++ b/.github/workflows/mac-14_ninja_clang15_d_h_f_mpich_sf.yml
@@ -68,7 +68,7 @@ jobs:
         cd mpich
         ./autogen.sh
         export PATH=/opt/local/libexec/llvm-21/bin:$PATH
-        export LDFLAGS="-L/opt/local/libexec/llvm-21/lib"
+        export LDFLAGS="-L/opt/local/libexec/llvm-21/lib -lSystem"
         export CPPFLAGS="-I/opt/local/libexec/llvm-21/include"
         ./configure CC=/opt/local/libexec/llvm-21/bin/clang FC=/opt/local/libexec/llvm-21/bin/flang \
           --prefix=/opt/local/mpich --disable-cxx
