--- a/.github/workflows/mac-14_ninja_clang15_d_h_f_mpich_sf.yml
+++ b/.github/workflows/mac-14_ninja_clang15_d_h_f_mpich_sf.yml
@@ -69,9 +69,9 @@ jobs:
         cd mpich
         ./autogen.sh
         export PATH=/opt/local/libexec/llvm-21/bin:$PATH
-        export LDFLAGS="-isysroot $SDKROOT -L/opt/local/libexec/llvm-21/lib -lSystem"
+        export LDFLAGS="-isysroot $SDKROOT -L/opt/local/libexec/llvm-21/lib"
         export CFLAGS="-isysroot $SDKROOT -I/opt/local/libexec/llvm-21/include"
-        export LIBS="-lFortranRuntime -lFortranDecimal"
+        export LIBS="-lflang_rt.runtime"
         ./configure \
           CC=/opt/local/libexec/llvm-21/bin/clang \
           FC=/opt/local/libexec/llvm-21/bin/flang \
