--- a/.github/workflows/mac-14_port_clang-21_d_flang-21_mpich-dev_h_sf.yml
+++ b/.github/workflows/mac-14_port_clang-21_d_flang-21_mpich-dev_h_sf.yml
@@ -1,9 +1,9 @@
-name: mac-14 ninja clang-15 f h d mpich sf
+name: mac-14 ninja clang-21 f h d mpich sf
 
 on:
   push:
     branches:
-      - main
+      - main-
 
 jobs:
   build:
