--- a/.github/workflows/mac-14_cl-21_fl-21_mpich.yml
+++ b/.github/workflows/mac-14_cl-21_fl-21_mpich.yml
@@ -20,11 +20,11 @@ jobs:
     - name: configure
       run: |
         find /opt/homebrew/
-        export CC=/opt/homebrew/opt/bin/clang-21
-        export CXX=/opt/homebrew/opt/bin/clang++-21
-        export FC=/opt/homebrew/opt/bin/flang-21
-        export F77=/opt/homebrew/opt/bin/flang-21
-        export LDFLAGS="-Wl,-ld_classic -L/opt/homebrew/opt/llvm/lib"
+        export CC=/opt/homebrew/Cellar/llvm/21.1.8/bin/clang
+        export CXX=/opt/homebrew/Cellar/llvm/21.1.8/bin/clang++
+        export FC=/opt/homebrew//bin/flang-21
+        export F77=/opt/homebrew/bin/flang-21
+        export LDFLAGS="-Wl,-ld_classic -L/opt/homebrew/Cellar/llvm/21.1.8/lib"
         ./autogen.sh
         ./configure --prefix=$PWD/install \
           --enable-fortran \
