--- a/.github/workflows/mac-14_cl-21_fl-21_mpich.yml
+++ b/.github/workflows/mac-14_cl-21_fl-21_mpich.yml
@@ -25,6 +25,7 @@ jobs:
         export FC=/opt/homebrew//bin/flang-21
         export F77=/opt/homebrew/bin/flang-21
         export LDFLAGS="-Wl,-ld_classic -L/opt/homebrew/Cellar/llvm/21.1.8/lib"
+        export FLIBS="-L/opt/homebrew/Cellar/llvm/21.1.8/lib -lFortran_main -lFortranRuntime -lFortranDecimal"
         ./autogen.sh
         ./configure --prefix=$PWD/install \
           --enable-fortran \
