--- a/.github/workflows/mac-14_cl-21_fl-21_mpich.yml
+++ b/.github/workflows/mac-14_cl-21_fl-21_mpich.yml
@@ -31,3 +31,6 @@ jobs:
           --enable-fortran \
           --disable-weak-symbols \
           CC=$CC CXX=$CXX FC=$FC F77=$FC
+      continue-on-error: true
+    - name: cat
+      run: cat mpich/config.log      
