ci: fix cat path

--- a/.github/workflows/mac-14_cl-21_fl-21_mpich.yml
+++ b/.github/workflows/mac-14_cl-21_fl-21_mpich.yml
@@ -33,4 +33,4 @@ jobs:
           CC=$CC CXX=$CXX FC=$FC F77=$FC
       continue-on-error: true
     - name: cat
-      run: cat mpich/config.log      
+      run: cat config.log      
