--- a/.github/workflows/mac-14_cl-21_fl-21_mpich.yml
+++ b/.github/workflows/mac-14_cl-21_fl-21_mpich.yml
@@ -26,7 +26,7 @@ jobs:
         export F77=/opt/homebrew/bin/flang-21
         export CFLAGS="-fuse-ld=lld"
         export FFLAGS="-fuse-ld=lld"
-        export LDFLAGS="-Wl,-ld_classic -L/opt/homebrew/Cellar/llvm/21.1.8/lib"
+        export LDFLAGS="-Wl, -L/opt/homebrew/Cellar/llvm/21.1.8/lib"
         export FLIBS="-L/opt/homebrew/Cellar/llvm/21.1.8/lib -lFortran_main -lFortranRuntime -lFortranDecimal"
         ./autogen.sh
         ./configure --prefix=$PWD/install \
