ci: install hwloc

--- a/.github/workflows/mac-14_cl-21_fl-21_mpich.yml
+++ b/.github/workflows/mac-14_cl-21_fl-21_mpich.yml
@@ -16,7 +16,7 @@ jobs:
         submodules: recursive
     - name: install
       run: |
-         brew install autoconf automake flang libtool lld
+         brew install autoconf automake flang hwloc libtool lld
     - name: configure
       run: |
         find /opt/homebrew/
