--- a/.github/workflows/arm64.yml
+++ b/.github/workflows/arm64.yml
@@ -15,7 +15,7 @@ jobs:
           - name: openbsd
             architecture: arm64
             version: '7.8'
-            host: ubuntu-24.04-arm
+            host: ubuntu-slim
     steps:
       - name: Checkout
         uses: actions/checkout@v6
